--- a/index.html
+++ b/index.html
@@ -1030,9 +1030,9 @@
                               <div data-ux="Layout" class="x-el x-el-div c1-1 c1-2 c1-7r c1-b c1-c c1-d c1-e c1-f c1-g">
                                  <div data-ux="FooterDetails" data-aid="FOOTER_COPYRIGHT_RENDERED" data-typography="BodyAlpha" class="x-el c1-1 c1-2 c1-1m c1-1b c1-4n c1-12 c1-9d c1-b c1-5g c1-c c1-5v c1-d c1-e c1-f c1-g x-rt">
                                     <p style="margin:0"><span>AUTO PEÇA PONTUAL&nbsp;- &nbsp;Desmonte Legalizado de Autos&nbsp;</span></p>
-                                    <p style="margin:0"><span>CNPJ: 36.443.048/0001-11</span></p>
-                                    <p style="margin:0"><span>R. Taubaté, 630 - Vila Fernandes, São Paulo - SP</span></p>
-                                    <p style="margin:0"><span>CEP: 03433-000</span></p>
+                                    <p style="margin:0"><span> CNPJ: 38.276.042/0001-23</  no span></p>
+                                    <p style="margin:0"><span>Av. Itajub 180 - Minas Gerais </   span></p>
+                                    <p style="margin:0"><span></span></p>
                                  </div>
                                  <div data-ux="Container" class="x-el x-el-div c1-1 c1-2 c1-24 c1-25 c1-s c1-t c1-1t c1-7r c1-b7 c1-b c1-c c1-5c c1-d c1-5d c1-e c1-5e c1-f c1-5f c1-g">
                                     <ul data-ux="NavFooter" class="x-el x-el-ul c1-1 c1-2 c1-b8 c1-1z c1-20 c1-21 c1-22 c1-12 c1-13 c1-14 c1-15 c1-16 c1-b c1-c c1-3a c1-5y c1-d c1-e c1-f c1-g">
